--- a/Memoria.Launcher/Languages/ru.xml
+++ b/Memoria.Launcher/Languages/ru.xml
@@ -38,19 +38,19 @@
 	Debuggable = "Отладка"
 	CheckUpdates = "Проверка обновлений"
 	IniOptions = "Опции"
-	Widescreen = "Широкоформатный"
+	Widescreen = "Широкоформатный экран"
 	BattleInterface = "Боевой интерфейс"
 	BattleInterfaceType0 = "Большой"
 	BattleInterfaceType1 = "Маленький"
-	BattleInterfaceType2 = "Модель PSX"
+	BattleInterfaceType2 = "Как в PSX-версии"
 	BattleInterfaceTooltip = "Вы можете настроить интерфейс в игре, нажав Alt+F1"
-	SkipIntrosToMainMenu = "Пропустить заставку"
-	SkipBattleSwirl = "Замешательство при загрузке битвы"
+	SkipIntrosToMainMenu = "Пропустить заставки и сразу ввойти в главное меню"
+	SkipBattleSwirl = "Отключить эффект "завихрения" перед боями"
 	AntiAliasing = "Сглаживание"
 	SkipBattleLoading = "Время загрузки битвы"
-	HideCardsBubbles = "Скрыть пузыри карт"
-	HideSteamBubbles = "Только пузыри PSX"
-	HideSteamBubblesTooltip = "Отключить пузыри «карта», «пляж»&#xA;и пузыри взаимодействия с NPC."
+	HideCardsBubbles = "Скрыть "пузырёк" карт"
+	HideSteamBubbles = "Только "пузырьки" как на PSX"
+	HideSteamBubblesTooltip = "Отключить "пузырьки речи" у «карт», «пляжа»&#xA;и "пузырьки" взаимодействия с NPC."
 	TurnBasedBattles = "Пошаговые бои"
 	SpeedChoice = "Скорость боя"
 	SpeedChoiceType0 = "Нормальная"
@@ -71,7 +71,7 @@
 	IniCheats = "Читы"
 	MaxStealRate = "100% кража"
 	DisableCantConcentrate = "Гарнет не теряет концентрацию"
-	BreakDamageLimit = "Удалить лимит урона"
+	BreakDamageLimit = "Убрать лимит урона"
 	AccessBattleMenu = "Меню в боях"
 	AccessBattleMenuType0 = "Нет доступа"
 	AccessBattleMenuType1 = "Ограниченный"
@@ -177,8 +177,8 @@
 	/>
 
 	<ModEditor
-	WindowTitle="Настройка Моды"
-	ModInfos = "Информация о Мод"
+	WindowTitle="Настройка Модов"
+	ModInfos = "Информация о Моде"
 	TabMyMods = "Установленные Моды"
 	TabCatalog = "Просмотр Каталога"
 	Mod = "Мод"
